[project]
name = "templatename"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []


[tool.ruff]
line-length = 150
indent-width = 2
fix = true
select = ["ALL"]
ignore = [
  "T201",
  "TRY003",
  "D1",
  "C901",
  "E111",
  "E114",
  "TD002",
  "TD003",
  "CPY",
  "EM",
]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "ruff>=0.6.5",
]
